--- a/client/app/register/register.html
+++ b/client/app/register/register.html
@@ -1,20 +1,71 @@
 <form name="participantForm">
+
+    <!--name input field begin-->
     <input type="text" name="name" placeholder="enter full name" ng-model="participant.name" ng-minlength="3"
            ng-maxlength="30" required/>
-
+    <!--error handling for name-->
     <div ng-show="participantForm.$submitted || participantForm.name.$touched">
         <div ng-show="participantForm.name.$error.required">Your name is required</div>
         <div ng-show="participantForm.name.$error.minlength">Enter a valid name</div>
         <div ng-show="participantForm.name.$error.maxlength">Enter a valid name</div>
 
     </div>
+    <!--name input field ends-->
 
-    <input type="age" name="age" placeholder="enter age" required/>
-    <input type="email" name="email" placeholder="enter email" required/>
-    <input type="phone" name="phone" placeholder="enter phone number" required/>
-    <input type="text" name="college-name" placeholder="enter college" required/>
-    <input type="text" name="course" placeholder="enter course" required>
-    <input list="academic-year" name="year" placeholder="enter year of your study" required>
+    <!--age input field begin-->
+    <input type="number" name="age" placeholder="enter age" ng-model="participant.age" ng-minlength="2" ng-maxlength="2"
+           required/>
+    <!--error handling for age-->
+    <div ng-show="participantForm.$submitted || participantForm.age.$touched">
+        <div ng-show="participantForm.age.$error.required">Your age is required</div>
+        <div ng-show="participantForm.age.$error.minlength">Enter a valid age</div>
+        <div ng-show="participantForm.age.$error.maxlength">Enter a valid age</div>
+    </div>
+    <!--age input field ends-->
+
+    <!--email input field begin-->
+    <input type="email" name="email" placeholder="enter email" ng-model="participant.email" required/>
+    <!--error handling for email-->
+    <div ng-show="participantForm.$submitted || participantForm.email.$touched">
+        <div ng-show="participantForm.email.$error.required">Your email is required</div>
+    </div>
+    <!--email input field ends-->
+
+    <!--phone input field begin-->
+    <input type="phone" name="phone" placeholder="enter phone number" ng-model="participant.phone" ng-maxlength="10"
+           ng-minlength="10" required/>
+    <!--error handling for phone-->
+    <div ng-show="participantForm.$submitted || participantForm.phone.touched">
+        <div ng-show="participantForm.phone.$error.required">A phone number is needed</div>
+        <div ng-show="participantForm.phone.$error.minlength">Enter valid phone number</div>
+        <div ng-show="participantForm.phone.$error.minlength">Enter valid phone number</div>
+    </div>
+    <!--phone input field ends-->
+
+    <!--college-name input field begins-->
+    <input type="text" name="college" placeholder="enter college" ng-model="participant.college" ng-minlength="2"
+           ng-maxength="30" required/>
+    <!--error handling for college field-->
+    <div ng-show="participantForm.$submitted || participantForm.college.touched">
+        <div ng-show="participantForm.college.$error.required"> College name is needed</div>
+        <div ng-show="participantForm.college.$error.minlength">Enter valid college name</div>
+        <div ng-show="participantForm.college.$error.maxlength">Enter valid college name</div>
+    </div>
+    <!--college name input field ends-->
+
+    <!--course input field begins-->
+    <input type="text" name="course" placeholder="enter course" ng-model="participant.course" ng-minlength="2"
+           ng-maxlength="20" required>
+    <!--error handling for course-->
+    <div ng-show="participantForm.$submitted || participantForm.course.touched">
+        <div ng-show="participantForm.course.$error.required"> Course name is needed</div>
+        <div ng-show="participantForm.course.$error.minlength">Enter valid course name</div>
+        <div ng-show="participantForm.course.$error.maxlength">Enter valid course name</div>
+    </div>
+    <!--course input field ends-->
+
+    <!--academic-year list begins-->
+    <input list="academic-year" name="year" placeholder="enter year of your study" ng-model="participant.academic_year" required>
     <datalist id="academic-year" required>
         <option value="1st"></option>
         <option value="2nd"></option>
@@ -22,10 +73,16 @@
         <option value="4th"></option>
         <option value="5th"></option>
     </datalist>
+    <!--error handling for academic-year-->
+    <div ng-show="participantForm.$submitted || participantForm.year.touched">
+        <div ng-show="participantForm.year.$error.required">  year of study is needed</div>
+    </div>
+    <!--academic-year list ends-->
 
-    <input list="event-names" name="event-list" placeholder="Choose Event" required>
+    <!--event-names list begin-->
+    <input list="event-names" name="events" placeholder="Choose Event" ng-model="participantForm.event" required>
     <datalist id="event-names">
-        <option value="monopoly"></option>
+        <option value="monopoly">wassup</option>
         <option value="monopoly"></option>
         <option value="monopoly"></option>
         <option value="monopoly"></option>
@@ -35,8 +92,19 @@
         <option value="monopoly"></option>
         <option value="monopoly"></option>
     </datalist>
+    <!--error handling for events-->
+    <div ng-show="participantForm.$submitted || participantForm.events.touched">
+        <div ng-show="participantForm.events.$error.required"> an event is needed</div>
+    </div>
+    <!--events list ends-->
 
     <button type="submit" ng-disabled="
-                                        participantForm.name.$error.required
-                                        ">Submit</button>
+                                        participantForm.name.$error.required ||
+                                        participantForm.name.$error.minlength ||
+                                        participantForm.name.$error.maxlength ||
+                                        participantForm.age.$error.required ||
+                                        participantForm.age.$error.minlength||
+                                        participantForm.age.$error.maxlength ||
+                                        participantForm.email.$error.required">Submit
+    </button>
 </form>
