--- a/client/app/register/register.html
+++ b/client/app/register/register.html
@@ -1,110 +1,184 @@
-<form name="participantForm">
+<form class="container" name="participantForm">
+
 
     <!--name input field begin-->
-    <input type="text" name="name" placeholder="enter full name" ng-model="participant.name" ng-minlength="3"
-           ng-maxlength="30" required/>
-    <!--error handling for name-->
-    <div ng-show="participantForm.$submitted || participantForm.name.$touched">
-        <div ng-show="participantForm.name.$error.required">Your name is required</div>
-        <div ng-show="participantForm.name.$error.minlength">Enter a valid name</div>
-        <div ng-show="participantForm.name.$error.maxlength">Enter a valid name</div>
+    <div class="row">
+        <div class="row">
+            <input class="col-lg-4" type="text" name="name" placeholder="enter full name" ng-model="participant.name"
+                   ng-minlength="3"
+                   ng-maxlength="30" required/>
+        </div>
 
+        <!--error handling for name-->
+        <div class="row">
+            <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.name.$touched">
+                <div ng-show="participantForm.name.$error.required">Your name is required</div>
+                <div ng-show="participantForm.name.$error.minlength">Enter a valid name</div>
+                <div ng-show="participantForm.name.$error.maxlength">Enter a valid name</div>
+            </div>
+        </div>
     </div>
     <!--name input field ends-->
 
     <!--age input field begin-->
-    <input type="number" name="age" placeholder="enter age" ng-model="participant.age" ng-minlength="2" ng-maxlength="2"
-           required/>
-    <!--error handling for age-->
-    <div ng-show="participantForm.$submitted || participantForm.age.$touched">
-        <div ng-show="participantForm.age.$error.required">Your age is required</div>
-        <div ng-show="participantForm.age.$error.minlength">Enter a valid age</div>
-        <div ng-show="participantForm.age.$error.maxlength">Enter a valid age</div>
+    <div class="row">
+        <div class="row">
+            <input class="col-lg-2" type="number" name="age" placeholder="enter age" ng-model="participant.age"
+                   ng-minlength="2"
+                   ng-maxlength="2"
+                   required/>
+        </div>
+        <!--error handling for age-->
+        <div class="row">
+            <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.age.$touched">
+                <div ng-show="participantForm.age.$error.required">Your age is required</div>
+                <div ng-show="participantForm.age.$error.minlength">Enter a valid age</div>
+                <div ng-show="participantForm.age.$error.maxlength">Enter a valid age</div>
+            </div>
+        </div>
     </div>
     <!--age input field ends-->
 
     <!--email input field begin-->
-    <input type="email" name="email" placeholder="enter email" ng-model="participant.email" required/>
-    <!--error handling for email-->
-    <div ng-show="participantForm.$submitted || participantForm.email.$touched">
-        <div ng-show="participantForm.email.$error.required">Your email is required</div>
+    <div class="row">
+        <div class="row">
+            <input class="col-lg-4" type="email" name="email" placeholder="enter email" ng-model="participant.email"
+                   required/>
+        </div>
+        <!--error handling for email-->
+        <div class="row">
+            <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.email.$touched">
+                <div ng-show="participantForm.email.$error.required">Your email is required</div>
+            </div>
+        </div>
     </div>
     <!--email input field ends-->
 
     <!--phone input field begin-->
-    <input type="phone" name="phone" placeholder="enter phone number" ng-model="participant.phone" ng-maxlength="10"
-           ng-minlength="10" required/>
-    <!--error handling for phone-->
-    <div ng-show="participantForm.$submitted || participantForm.phone.touched">
-        <div ng-show="participantForm.phone.$error.required">A phone number is needed</div>
-        <div ng-show="participantForm.phone.$error.minlength">Enter valid phone number</div>
-        <div ng-show="participantForm.phone.$error.minlength">Enter valid phone number</div>
+    <div class="row">
+        <div class="row">
+            <input class="col-lg-4" type="phone" name="phone" placeholder="enter phone number"
+                   ng-model="participant.phone"
+                    required/>
+        </div>
+        <!--error handling for phone-->
+        <div class="row">
+            <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.phone.touched">
+                <div ng-show="participantForm.phone.$error.required">A phone number is needed</div>
+                <!--<div ng-show="participantForm.phone.$error.minlength">Enter valid phone number</div>-->
+                <!--<div ng-show="participantForm.phone.$error.minlength">Enter valid phone number</div>-->
+            </div>
+        </div>
     </div>
     <!--phone input field ends-->
 
     <!--college-name input field begins-->
-    <input type="text" name="college" placeholder="enter college" ng-model="participant.college" ng-minlength="2"
-           ng-maxength="30" required/>
-    <!--error handling for college field-->
-    <div ng-show="participantForm.$submitted || participantForm.college.touched">
-        <div ng-show="participantForm.college.$error.required"> College name is needed</div>
-        <div ng-show="participantForm.college.$error.minlength">Enter valid college name</div>
-        <div ng-show="participantForm.college.$error.maxlength">Enter valid college name</div>
+    <div class="row">
+        <div class="row">
+            <input class="col-lg-4" type="text" name="college" placeholder="enter college"
+                   ng-model="participant.college"
+                   ng-minlength="2"
+                   ng-maxength="30" required/>
+        </div>
+        <!--error handling for college field-->
+        <div class="row">
+            <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.college.touched">
+                <div ng-show="participantForm.college.$error.required"> College name is needed</div>
+                <div ng-show="participantForm.college.$error.minlength">Enter valid college name</div>
+                <div ng-show="participantForm.college.$error.maxlength">Enter valid college name</div>
+            </div>
+        </div>
     </div>
     <!--college name input field ends-->
 
     <!--course input field begins-->
-    <input type="text" name="course" placeholder="enter course" ng-model="participant.course" ng-minlength="2"
-           ng-maxlength="20" required>
-    <!--error handling for course-->
-    <div ng-show="participantForm.$submitted || participantForm.course.touched">
-        <div ng-show="participantForm.course.$error.required"> Course name is needed</div>
-        <div ng-show="participantForm.course.$error.minlength">Enter valid course name</div>
-        <div ng-show="participantForm.course.$error.maxlength">Enter valid course name</div>
+    <div class="row">
+        <div class="row">
+            <input class="col-lg-4" type="text" name="course" placeholder="enter course" ng-model="participant.course"
+                   ng-minlength="2"
+                   ng-maxlength="20" required>
+        </div>
+        <!--error handling for course-->
+        <div class="row">
+            <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.course.touched">
+                <div ng-show="participantForm.course.$error.required"> Course name is needed</div>
+                <div ng-show="participantForm.course.$error.minlength">Enter valid course name</div>
+                <div ng-show="participantForm.course.$error.maxlength">Enter valid course name</div>
+            </div>
+        </div>
     </div>
     <!--course input field ends-->
 
     <!--academic-year list begins-->
-    <input list="academic-year" name="year" placeholder="enter year of your study" ng-model="participant.academic_year" required>
-    <datalist id="academic-year" required>
-        <option value="1st"></option>
-        <option value="2nd"></option>
-        <option value="3rd"></option>
-        <option value="4th"></option>
-        <option value="5th"></option>
-    </datalist>
-    <!--error handling for academic-year-->
-    <div ng-show="participantForm.$submitted || participantForm.year.touched">
-        <div ng-show="participantForm.year.$error.required">  year of study is needed</div>
+    <div class="row">
+        <div class="row">
+            <input class="col-lg-4" list="academic-year" name="year" placeholder="enter year of your study"
+                   ng-model="participant.academic_year"
+                   required>
+        </div>
+        <datalist id="academic-year" required>
+            <option value="1st"></option>
+            <option value="2nd"></option>
+            <option value="3rd"></option>
+            <option value="4th"></option>
+            <option value="5th"></option>
+        </datalist>
+        <!--error handling for academic-year-->
+        <div class="row">
+            <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.year.touched">
+                <div ng-show="participantForm.year.$error.required"> year of study is needed</div>
+            </div>
+        </div>
     </div>
     <!--academic-year list ends-->
 
-    <!--event-names list begin-->
-    <input list="event-names" name="events" placeholder="Choose Event" ng-model="participantForm.event" required>
-    <datalist id="event-names">
-        <option value="monopoly">wassup</option>
-        <option value="monopoly"></option>
-        <option value="monopoly"></option>
-        <option value="monopoly"></option>
-        <option value="monopoly"></option>
-        <option value="monopoly"></option>
-        <option value="monopoly"></option>
-        <option value="monopoly"></option>
-        <option value="monopoly"></option>
-    </datalist>
-    <!--error handling for events-->
-    <div ng-show="participantForm.$submitted || participantForm.events.touched">
-        <div ng-show="participantForm.events.$error.required"> an event is needed</div>
+    <div class="row">
+        <!--event-names list begin-->
+        <div class="row">
+            <input class="col-lg-4" list="event-names" name="events" placeholder="Choose Event"
+                   ng-model="participantForm.event"
+                   required>
+        </div>
+        <datalist id="event-names">
+            <option value="monopoly"></option>
+            <option value="monopoly"></option>
+            <option value="monopoly"></option>
+            <option value="monopoly"></option>
+            <option value="monopoly"></option>
+            <option value="monopoly"></option>
+            <option value="monopoly"></option>
+            <option value="monopoly"></option>
+            <option value="monopoly"></option>
+        </datalist>
+        <!--error handling for events-->
+        <div class="row">
+            <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.events.touched">
+                <div ng-show="participantForm.events.$error.required"> an event is needed</div>
+            </div>
+        </div>
     </div>
     <!--events list ends-->
 
-    <button type="submit" ng-disabled="
-                                        participantForm.name.$error.required ||
+    <button type="submit" ng-disabled="participantForm.name.$error.required ||
                                         participantForm.name.$error.minlength ||
                                         participantForm.name.$error.maxlength ||
                                         participantForm.age.$error.required ||
                                         participantForm.age.$error.minlength||
                                         participantForm.age.$error.maxlength ||
-                                        participantForm.email.$error.required">Submit
+                                        participantForm.email.$error.required ||
+                                        participantForm.phone.$error.required ||
+                                        participantForm.phone.$error.minlength||
+                                        participantForm.phone.$error.maxlength ||
+                                        participantForm.college.$error.required ||
+                                        participantForm.college.$error.minlength ||
+                                        participantForm.college.$error.maxlength ||
+                                        participantForm.course.$error.required ||
+                                        participantForm.course.$error.minlength ||
+                                        participantForm.course.$error.maxlength ||
+                                        participantForm.year.$error.required ||
+                                        participantForm.events.$error.required">
+        Submit
     </button>
+
+    <button type="submit"> Submit</button>
 </form>
