--- a/client/app/register/register.html
+++ b/client/app/register/register.html
@@ -1,4 +1,4 @@
-<form class="container" name="participantForm">
+<form class="container" name="participantForm" ng-submit="submitInfo(participant)">
 
 
     <!--name input field begin-->
@@ -23,17 +23,13 @@
     <!--age input field begin-->
     <div class="row">
         <div class="row">
-            <input class="col-lg-2" type="number" name="age" placeholder="enter age" ng-model="participant.age"
-                   ng-minlength="2"
-                   ng-maxlength="2"
+            <input class="col-lg-4" type="number" name="age" placeholder="enter age" ng-model="participant.age"
                    required/>
         </div>
-        <!--error handling for age-->
+        <!--error handling for email-->
         <div class="row">
             <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.age.$touched">
                 <div ng-show="participantForm.age.$error.required">Your age is required</div>
-                <div ng-show="participantForm.age.$error.minlength">Enter a valid age</div>
-                <div ng-show="participantForm.age.$error.maxlength">Enter a valid age</div>
             </div>
         </div>
     </div>
@@ -57,35 +53,34 @@
     <!--phone input field begin-->
     <div class="row">
         <div class="row">
-            <input class="col-lg-4" type="phone" name="phone" placeholder="enter phone number"
-                   ng-model="participant.phone"
-                    required/>
+            <input class="col-lg-4" type="text" name="phone" placeholder="enter phone" ng-model="participant.phone"
+                   required/>
         </div>
         <!--error handling for phone-->
         <div class="row">
-            <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.phone.touched">
-                <div ng-show="participantForm.phone.$error.required">A phone number is needed</div>
-                <!--<div ng-show="participantForm.phone.$error.minlength">Enter valid phone number</div>-->
-                <!--<div ng-show="participantForm.phone.$error.minlength">Enter valid phone number</div>-->
+            <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.phone.$touched">
+                <div ng-show="participantForm.phone.$error.required">Your phone is required</div>
             </div>
         </div>
     </div>
     <!--phone input field ends-->
 
+
     <!--college-name input field begins-->
     <div class="row">
         <div class="row">
-            <input class="col-lg-4" type="text" name="college" placeholder="enter college"
+            <input class="col-lg-2" type="text" name="college" placeholder="enter college"
                    ng-model="participant.college"
                    ng-minlength="2"
-                   ng-maxength="30" required/>
+                   ng-maxlength="30"
+                   required/>
         </div>
-        <!--error handling for college field-->
+        <!--error handling for age-->
         <div class="row">
-            <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.college.touched">
-                <div ng-show="participantForm.college.$error.required"> College name is needed</div>
-                <div ng-show="participantForm.college.$error.minlength">Enter valid college name</div>
-                <div ng-show="participantForm.college.$error.maxlength">Enter valid college name</div>
+            <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.college.$touched">
+                <div ng-show="participantForm.college.$error.required">Your college is required</div>
+                <div ng-show="participantForm.college.$error.minlength">Enter a valid name</div>
+                <div ng-show="participantForm.college.$error.maxlength">Enter a valid name</div>
             </div>
         </div>
     </div>
@@ -94,16 +89,18 @@
     <!--course input field begins-->
     <div class="row">
         <div class="row">
-            <input class="col-lg-4" type="text" name="course" placeholder="enter course" ng-model="participant.course"
+            <input class="col-lg-2" type="text" name="course" placeholder="enter course"
+                   ng-model="participant.course"
                    ng-minlength="2"
-                   ng-maxlength="20" required>
+                   ng-maxlength="30"
+                   required/>
         </div>
-        <!--error handling for course-->
+        <!--error handling for age-->
         <div class="row">
-            <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.course.touched">
-                <div ng-show="participantForm.course.$error.required"> Course name is needed</div>
-                <div ng-show="participantForm.course.$error.minlength">Enter valid course name</div>
-                <div ng-show="participantForm.course.$error.maxlength">Enter valid course name</div>
+            <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.course.$touched">
+                <div ng-show="participantForm.course.$error.required">Your course is required</div>
+                <div ng-show="participantForm.course.$error.minlength">Enter a valid name</div>
+                <div ng-show="participantForm.course.$error.maxlength">Enter a valid name</div>
             </div>
         </div>
     </div>
@@ -112,17 +109,15 @@
     <!--academic-year list begins-->
     <div class="row">
         <div class="row">
-            <input class="col-lg-4" list="academic-year" name="year" placeholder="enter year of your study"
-                   ng-model="participant.academic_year"
-                   required>
+            <select class="col-lg-4" name="year" ng-model="participant.academic_year" required="true">
+                <option value="1">1st</option>
+                <option value="2">2nd</option>
+                <option value="3">3rd</option>
+                <option value="4">4th</option>
+                <option value="5">5th</option>
+            </select>
         </div>
-        <datalist id="academic-year" required>
-            <option value="1st"></option>
-            <option value="2nd"></option>
-            <option value="3rd"></option>
-            <option value="4th"></option>
-            <option value="5th"></option>
-        </datalist>
+
         <!--error handling for academic-year-->
         <div class="row">
             <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.year.touched">
@@ -132,24 +127,22 @@
     </div>
     <!--academic-year list ends-->
 
+
+    <!--event-names list begin-->
     <div class="row">
-        <!--event-names list begin-->
         <div class="row">
-            <input class="col-lg-4" list="event-names" name="events" placeholder="Choose Event"
-                   ng-model="participantForm.event"
-                   required>
+            <select class="col-lg-4" name="events" ng-model="participant.event" required="true">
+                <option value="Monopoly">Monopoly</option>
+                <option value="Monopoly">Monopoly</option>
+                <option value="Monopoly">Monopoly</option>
+                <option value="Monopoly">Monopoly</option>
+                <option value="Monopoly">Monopoly</option>
+                <option value="Monopoly">Monopoly</option>
+                <option value="Monopoly">Monopoly</option>
+                <option value="Monopoly">Monopoly</option>
+                <option value="Monopoly">Monopoly</option>
+            </select>
         </div>
-        <datalist id="event-names">
-            <option value="monopoly"></option>
-            <option value="monopoly"></option>
-            <option value="monopoly"></option>
-            <option value="monopoly"></option>
-            <option value="monopoly"></option>
-            <option value="monopoly"></option>
-            <option value="monopoly"></option>
-            <option value="monopoly"></option>
-            <option value="monopoly"></option>
-        </datalist>
         <!--error handling for events-->
         <div class="row">
             <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.events.touched">
