--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,22 +1,38 @@
-<navbar></navbar>
+<div class="landing">
+    <div class="col-xs-12" style="height:70px;"></div>
+    <div class="container">
+        <div class="college-name">
+            <h4 class="row">Kamala Nehru College</h4>
 
-<header class="hero-unit" id="banner">
-  <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
-  </div>
-</header>
+            <h3 class="row">
+                <small>Economics Society presents</small>
+            </h3>
+        </div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in main.awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul>
+        <div class="col-lg-offset-2 col-lg-8 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12">
+            <img class="img-responsive" src="assets/images/Ecophoria-Coming-Soon.png" alt=""/>
+        </div>
+        <div class="row">
+            <div class="col-xs-12" style="height:50px;"></div>
+        </div>
+        <div class="row">
+            <button class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+                Register
+            </button>
+        </div>
+        <div class="row">
+            <div class="col-xs-12" style="height:50px;"></div>
+        </div>
+        <div class="row">
+            <button class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+                All Events
+            </button>
+        </div>
     </div>
-  </div>
 </div>
 
-<footer></footer>
+<div class="events">
+    this is another thing
+</div>
+
+
