--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -16,15 +16,15 @@
             <div class="col-xs-12" style="height:50px;"></div>
         </div>
         <div class="row">
-            <button class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+            <button class="register-button col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
                 Register
             </button>
         </div>
         <div class="row">
-            <div class="col-xs-12" style="height:50px;"></div>
+            <div class="col-xs-12" style="height:30px;"></div>
         </div>
         <div class="row">
-            <button class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
+            <button class="event-button col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
                 All Events
             </button>
         </div>
