--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,6 +1,3 @@
-
-
-
 <div class="landing">
 <div class="col-xs-12" style="height:70px;"></div>
 <div class="honey-comb">
@@ -3578,7 +3575,7 @@
 
 
 <div class="container">
-    <div class="college-name">
+    <div class="col-lg-12 college-name">
         <h4 class="row">Kamala Nehru College</h4>
 
         <h3 class="row">
@@ -3594,7 +3591,8 @@
         <div class="col-xs-12" style="height:10px;"></div>
     </div>
     <div class="row">
-        <button ui-sref="register" class="register-button col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
+        <button ui-sref="register"
+                class="register-button col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
             Register
         </button>
     </div>
@@ -3602,7 +3600,8 @@
         <div class="col-xs-12" style="height:30px;"></div>
     </div>
     <div class="row">
-        <button class="event-button col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
+        <button ng-click="scrollToEvents()"
+                class="event-button col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
             All Events
         </button>
     </div>
@@ -3610,9 +3609,14 @@
 
 </div>
 
-<div class="events">
-    this is another thing
-
+<div id="events" class="events">
+    <div class="container">
+        <div ng-repeat="event in events">
+            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+                <div class="col-lg-1 col-lg-10 col-md-12 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1  event-card">{{event.name}}</div>
+            </div>
+        </div>
+    </div>
 </div>
 
 
