--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -3610,10 +3610,20 @@
 </div>
 
 <div id="events" class="events">
+    <div class="col-lg-12">
+        <h3 class="college-name">Events we have to offer in Ecophoria</h3>
+    </div>
     <div class="container">
         <div ng-repeat="event in events">
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                <div class="col-lg-1 col-lg-10 col-md-12 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1  event-card">{{event.name}}</div>
+                <div class="col-lg-1 col-lg-10 col-md-12 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1  event-card">
+
+                    <img class="img-responsive event-image" ng-src="{{event.image}}" alt=""/>
+
+                    <!--<h4>{{event.name}}</h4>-->
+
+                    <!--<p>{{event.desc}}</p>-->
+                </div>
             </div>
         </div>
     </div>
