--- a/client/app/register/register.html
+++ b/client/app/register/register.html
@@ -149,17 +149,17 @@
         <!--event-names list begin-->
         <div class="row input-field">
             <div class="row">
-                <select class="col-lg-4" name="events" ng-model="participant.event" required="true">
+                <select class="col-lg-4" name="events" ng-model="participant.event" ng-change="eventSelected()" required="true">
                     <option value="">Please select event</option>
-                    <option value="Monopoly">Monopoly</option>
-                    <option value="Monopoly">Monopoly</option>
-                    <option value="Monopoly">Monopoly</option>
-                    <option value="Monopoly">Monopoly</option>
-                    <option value="Monopoly">Monopoly</option>
-                    <option value="Monopoly">Monopoly</option>
-                    <option value="Monopoly">Monopoly</option>
-                    <option value="Monopoly">Monopoly</option>
-                    <option value="Monopoly">Monopoly</option>
+                    <option value="B-plan">B-plan</option>
+                    <option value="The credible">The credible</option>
+                    <option value="The winning move">The winning move</option>
+                    <option value="Quiz pro Quo">Quiz pro quo</option>
+                    <option value="Connectonomics">Connectonomics</option>
+                    <option value="The templar treasure">The Templar Treasure</option>
+                    <option value="Posterize">Posterize</option>
+                    <option value="Minute to win it">Minute to win it</option>
+                    <option value="Shock the stocks">Shock the stocks</option>
                 </select>
             </div>
             <!--error handling for events-->
@@ -170,6 +170,34 @@
             </div>
         </div>
         <!--events list ends-->
+        <div ng-show="show2" class="row input-field">
+            <label for="team">Team mates names *</label>
+
+            <div class="row">
+                <input id="team" class="col-lg-2" type="text" name="course" placeholder="enter team member name"
+                       ng-model="participant.course"
+                       ng-minlength="2"
+                       ng-maxlength="30"
+                       required/>
+            </div>
+            <div class="row">
+                <input class="col-lg-2" type="text" name="course" placeholder="enter team member name"
+                       ng-model="participant.course"
+                       ng-minlength="2"
+                       ng-maxlength="30"
+                       required/>
+            </div>
+            <!--error handling for age-->
+            <div class="row">
+                <div class="col-lg-4" ng-show="participantForm.$submitted || participantForm.course.$touched">
+                    <div class="handle-error" ng-show="participantForm.course.$error.required">Your course is required</div>
+                    <div class="handle-error" ng-show="participantForm.course.$error.minlength">Enter a valid name</div>
+                    <div class="handle-error" ng-show="participantForm.course.$error.maxlength">Enter a valid name</div>
+                </div>
+            </div>
+        </div>
+
+        <!--input options for participants begins-->
 
         <button type="submit" ng-disabled="participantForm.name.$error.required ||
                                         participantForm.name.$error.minlength ||
