--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -3616,17 +3616,46 @@
     <div class="container">
         <div ng-repeat="event in events">
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                <div class="col-lg-1 col-lg-10 col-md-12 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1  event-card">
+                <button class="col-lg-1 col-lg-10 col-md-12 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1  event-card">
 
                     <img class="img-responsive event-image" ng-src="{{event.image}}" alt=""/>
 
                     <!--<h4>{{event.name}}</h4>-->
 
                     <!--<p>{{event.desc}}</p>-->
-                </div>
+                </button>
             </div>
         </div>
     </div>
+
+    <div class="sponsors">
+        <div style="height: 30px;"></div>
+        <div class="col-lg-12">
+            <h3 class="college-name" style="margin-top: 30px;">Powered By</h3>
+        </div>
+            <div style="height: 30px;"></div>
+            <div class="container">
+                <div class="row">
+
+                    <img class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 sponsor-image img-responsive"
+                         src="assets/images/FINAL_CSE_LOGO.png" alt=""/>
+
+
+                    <img class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 sponsor-image img-responsive"
+                         src="assets/images/DUBeat.jpg" alt=""/>
+
+                    <img class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 sponsor-image img-responsive"
+                         src="assets/images/cllogo.png" alt=""/>
+
+
+                </div>
+
+            </div>
+        </div>
+
+
+    </div>
+    <div class="contact">This will be the contact space</div>
 </div>
 
 
