Completed with multiple event registrations from the client side

--- a/client/app/register/register.html
+++ b/client/app/register/register.html
@@ -149,7 +149,7 @@
         <!--event-names list begin-->
         <div class="row input-field">
             <div class="row">
-                <select class="col-lg-4" name="events" ng-model="participant.event" ng-change="eventSelected()" required="true">
+                <select class="col-lg-4" name="events" ng-model="event.name" ng-change="eventSelected()" required="true">
                     <option value="">Please select event</option>
                     <option value="B-plan">B-plan</option>
                     <option value="The credible">The credible</option>
