Registration form is done and done

--- a/client/index.html
+++ b/client/index.html
@@ -63,7 +63,7 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/register/register.js"></script>
+      <script src="app/success/success.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
@@ -73,7 +73,9 @@
       <script src="app/participants/participants.controller.js"></script>
       <script src="app/participants/participants.js"></script>
       <script src="app/register/register.controller.js"></script>
+      <script src="app/register/register.js"></script>
       <script src="app/account/login/login.controller.js"></script>
+      <script src="app/success/success.js"></script>
       <script src="app/account/settings/settings.controller.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
