changes as per equested

--- a/client/index.html
+++ b/client/index.html
@@ -63,20 +63,24 @@
       <script src="app/admin/admin.module.js"></script>
       <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/success/success.controller.js"></script>
+      <script src="app/register/register.controller.js"></script>
+      <script src="app/account/settings/settings.controller.js"></script>
+      <script src="app/account/signup/signup.controller.js"></script>
       <script src="app/admin/admin.controller.js"></script>
-      <script src="app/account/account.js"></script>
+      <script src="app/Allevents/Allevents.controller.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
+      <script src="app/events/events.controller.js"></script>
+      <script src="app/events/events.js"></script>
       <script src="app/main/main.controller.js"></script>
       <script src="app/main/main.js"></script>
       <script src="app/participants/participants.controller.js"></script>
       <script src="app/participants/participants.js"></script>
-      <script src="app/register/register.controller.js"></script>
+      <script src="app/Allevents/Allevents.js"></script>
       <script src="app/register/register.js"></script>
-      <script src="app/account/login/login.controller.js"></script>
+      <script src="app/success/success.controller.js"></script>
       <script src="app/success/success.js"></script>
-      <script src="app/account/settings/settings.controller.js"></script>
+      <script src="app/account/account.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
@@ -86,7 +90,7 @@
       <script src="components/mongoose-error/mongoose-error.directive.js"></script>
       <script src="components/navbar/navbar.controller.js"></script>
       <script src="components/navbar/navbar.directive.js"></script>
-      <script src="app/account/signup/signup.controller.js"></script>
+      <script src="app/account/login/login.controller.js"></script>
       <script src="components/util/util.service.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
