--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -3600,7 +3600,7 @@
         <div class="col-xs-12" style="height:30px;"></div>
     </div>
     <div class="row">
-        <button ng-click="scrollToEvents()"
+        <button ui-sref="Allevents"
                 class="event-button col-lg-4 col-lg-offset-4 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-8 col-xs-offset-2">
             All Events
         </button>
@@ -3609,72 +3609,61 @@
 
 </div>
 
-<div id="events" class="events">
+
+<div class="sponsors">
+    <div style="height: 15px;"></div>
     <div class="col-lg-12">
-        <h3 class="college-name">Events we have to offer in Ecophoria</h3>
+        <h3 class="college-name" style="margin-top: 30px;">Powered By</h3>
     </div>
+    <div style="height: 15px;"></div>
     <div class="container">
-        <div ng-repeat="event in events">
-            <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                <button class="col-lg-1 col-lg-10 col-md-12 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1  event-card">
+        <div class="row">
 
-                    <img class="img-responsive event-image" ng-src="{{event.image}}" alt=""/>
+            <img class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 sponsor-image img-responsive"
+                 src="assets/images/FINAL_CSE_LOGO.png" alt=""/>
 
-                    <!--<h4>{{event.name}}</h4>-->
 
-                    <!--<p>{{event.desc}}</p>-->
-                </button>
-            </div>
+            <img class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 sponsor-image img-responsive"
+                 src="assets/images/DUBeat.jpg" alt=""/>
+
+            <img class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 sponsor-image img-responsive"
+                 src="assets/images/cllogo.png" alt=""/>
         </div>
     </div>
 
-    <div class="sponsors">
-        <div style="height: 15px;"></div>
-        <div class="col-lg-12">
-            <h3 class="college-name" style="margin-top: 30px;">Powered By</h3>
-        </div>
-        <div style="height: 15px;"></div>
+
+    <div class="contact">
         <div class="container">
-            <div class="row">
-
-                <img class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 sponsor-image img-responsive"
-                     src="assets/images/FINAL_CSE_LOGO.png" alt=""/>
-
-
-                <img class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 sponsor-image img-responsive"
-                     src="assets/images/DUBeat.jpg" alt=""/>
-
-                <img class="col-lg-3 col-lg-offset-0 col-md-4 col-md-offset-0 col-sm-4 col-sm-offset-0 col-xs-8 col-xs-offset-2 sponsor-image img-responsive"
-                     src="assets/images/cllogo.png" alt=""/>
-
+            <div style="height: 10px;"></div>
+            <div class="row" style="text-align: center;">
+                <div class="glyphicon glyphicon-earphone" style="color:white; " aria-hidden="true">
+                    Arushi Mishra: 8800725617, Rhea Shukla: 8527705663
+                </div>
 
             </div>
+            <div style="height: 10px;"></div>
 
-        </div>
-        <div class="contact">
-            <div class="container">
-                <div style="height: 50px;"></div>
-                <div class="row" style="text-align: center;">
-                    <div class="glyphicon glyphicon-earphone" style="color:white; " aria-hidden="true">
-                        Arushi Mishra: 8800725617, Rhea Shukla: 8527705663
-                    </div>
-
-                </div>
-                <div style="height: 30px;"></div>
-
-                <div class="row" style="text-align: center;">
-                    <div class="glyphicon glyphicon-envelope" style="color:white; " aria-hidden="true">
-                        ecophoriaknc201516@gmail.com
-                    </div>
+            <div class="row" style="text-align: center;">
+                <div class="glyphicon glyphicon-envelope" style="color:white; " aria-hidden="true">
+                    ecophoriaknc201516@gmail.com
                 </div>
             </div>
+            <div style="height: 10px;"></div>
         </div>
     </div>
 
+    <div class="develop" style="background-color: white">
+        <div class="develop-text">Designed & Developed by <a href="https://twitter.com/sarna_pranu">@sarna_pranu</a></div>
+    </div>
 
 </div>
 
+
 </div>
+
+
+</div>
+
 
 
 
