--- a/client/app/success/success.html
+++ b/client/app/success/success.html
@@ -1,3 +1,6 @@
-<div class="col-md-12">
-This is the success view.
+
+
+<div class="container" style="text-align: center">
+    <h3 style="color: #008000">You have successfully registered for Ecophoria 2016</h3>
+    <button class="another" ui-sref="register"> Register for another event </button>
 </div>
