--- a/client/app/register/register.html
+++ b/client/app/register/register.html
@@ -166,15 +166,15 @@
         <select class="col-lg-4 col-md-6 col-sm-6 col-xs-10" name="events" ng-model="event.name"
                 ng-change="eventSelected()" required="true">
             <option value="">Please select event</option>
-            <option value="B-plan">B-plan</option>
+            <option value="Startup Challenge">Startup Challenge</option>
             <option value="The credible">The credible</option>
-            <option value="The winning move">The winning move</option>
+            <option value="Monopoly">Monopoly</option>
             <option value="Quiz pro Quo">Quiz pro quo</option>
             <option value="Connectonomics">Connectonomics</option>
-            <option value="The templar treasure">The Templar Treasure</option>
+            <option value="Clued Inn ">Clued Inn</option>
             <option value="Posterize">Posterize</option>
             <option value="Minute to win it">Minute to win it</option>
-            <option value="Shock the stocks">Shock the stocks</option>
+           
         </select>
     </div>
     <!--error handling for events-->
