--- a/client/app/Allevents/Allevents.html
+++ b/client/app/Allevents/Allevents.html
@@ -5,14 +5,19 @@
     <div class="container">
         <div ng-repeat="event in events">
             <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
-                <button ng-click="goToEvents(event.name)" class="col-lg-1 col-lg-10 col-md-12 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1  event-card">
+                <button ng-click="goToEvents(event.name)"
+                        class="col-lg-1 col-lg-10 col-md-12 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1  event-card">
 
                     <img class="img-responsive event-image" ng-src="{{event.image}}" alt=""/>
 
-                    <!--<h4>{{event.name}}</h4>-->
 
-                    <!--<p>{{event.desc}}</p>-->
                 </button>
             </div>
         </div>
+
     </div>
+      <div style="text-align: center;" class="row">
+            <button ui-sref="main" class="home-button">Home</button>
+        </div>
+
+</div>
